welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:3: error: object toInt is not a member of package ch
    var d = ch.toInt(litMessage())
               ^